CHANGES for LIRE
================

2013-06-23
==========
  - Added a new distance routine to OpponentHistogram, that could prove faster when reading from an index.
  - Profiled search and found that the compressed stored fields made search awfully slow. Decompression
    takes up to 60% search time.
  - If an ImageSearcher starts with caching the byte[] values in memory, search time goes down rapidly.
    Results from a test:
      # of images in an index of OpponentHistogram = 50000
      init time of cached search: ms = 1414
      100 searches with the cached searcher: ms = 4186
      100 searches with the non-cached version: ms = 106879

2013-06-22
==========
  -  Tested LocalBinaryPatterns in TestGroundTruth

2013-06-22
==========
  - Added local binary patterns implementation & tests

2013-06-03
==========
  - Changed BitSampling member access to getters & setters.

2013-06-02
==========
  - Additional tests and bug fixes in BitSamplingImageSearcher and GenericFastImageSearcher
  - net.semanticmetadata.lire.indexing.tools.ProximityHashingIndexor added.

2013-06-01
==========
  - Added TestHashing to test the performance of approximate search.
  - Tuned ParallelIndexer to better cope with OutOfMemoryError problems.
  - Investigated optimal parameters for BitSampling with an ColorLayout & OpponentHistogram index (works fine)
    bits = 30, numFunctionBundles = 100, w = 4d;
  - Investigated optimal parameters for BitSampling with an PHOG index (does not work too well)
    bits = 16, numFunctionBundles = 100, w = 4d;

2013-05-28
==========
  - Changed quantization and serialization of AutoColorCorrelogram. It now just takes 512 bytes for
    a descriptor instead of 4096 with the same (even slightly better) retrieval performance.

2013-05-28
==========
  - Added SPFCTH
  - Fixed serialization of SPJCD

2013-05-27
==========
  - Added SPJCD

2013-05-19
==========
  - Fixed bug in ParallelIndexer and ParallelExtractor
  - Added SPCEDD

2013-05-15
==========